# NAVI

./: .gitignore  README.md  pyproject.toml
docs/: cloudflared-sharing.md  design-borrowing.md  qunar-fliggy-roadmap.md  sharing-platform-design.md  visual-sharing-deployment-overall-design.md  yunnan-roadtrip-yibin-assembly-2026-04-30_to_2026-05-05.md
scripts/: prepublish_check.py
tests/: test_app.py  test_models.py  test_parsers.py  test_planner.py  test_publish_check.py  test_qunar_capture.py  test_service_checkpoint.py
tests/fixtures/: hotel_ctrip.html  hotel_ctrip_mobile.html  hotel_ctrip_next_data.html  hotel_fliggy.html  hotel_meituan.html  hotel_meituan_guide.html  hotel_qunar.html  xiaohongshu_search.html
travel_planner/: __init__.py  case_exports.py  case_studies.py  cli.py  config.py  database.py  main.py  pdf_exports.py  publish_check.py  schemas.py  service.py  share_public.py  tunnel.py  utils.py
travel_planner/connectors/: __init__.py  base.py  browser.py  hotels.py  map.py  rail.py  xiaohongshu.py
travel_planner/debug_tools/: __init__.py  browser_launch.py  qunar_capture.py
travel_planner/planner/: __init__.py  engine.py
travel_planner/skill/: SKILL.md
travel_planner/static/: style.css
travel_planner/templates/: base.html  case_study_yunnan.html  index.html  job.html  result.html
