[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-planner-agent"
version = "0.1.0"
description = "Domestic travel planning agent with FastAPI, Playwright, and Codex skill support."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "openpyxl>=3.1,<4",
  "playwright>=1.52,<2",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
travel-planner = "travel_planner.cli:main"
travel-planner-publish-check = "travel_planner.publish_check:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.0,<9",
]

[tool.setuptools.packages.find]
include = ["travel_planner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
